crates/mys/src/client_ptb/snapshots/mys__client_ptb__lexer__tests__tokenize_address.snap
---
source: crates/mys/src/client_ptb/lexer.rs
expression: lex(addrs)
---
[
    Spanned {
        span: Span {
            start: 0,
            end: 1,
        },
        value: Lexeme(
            At,
            "@",
        ),
    },
    Spanned {
        span: Span {
            start: 1,
            end: 4,
        },
        value: Lexeme(
            HexNumber,
            "1",
        ),
    },
    Spanned {
        span: Span {
            start: 5,
            end: 6,
        },
        value: Lexeme(
            At,
            "@",
        ),
    },
    Spanned {
        span: Span {
            start: 6,
            end: 13,
        },
        value: Lexeme(
            HexNumber,
            "1_000",
        ),
    },
    Spanned {
        span: Span {
            start: 14,
            end: 15,
        },
        value: Lexeme(
            At,
            "@",
        ),
    },
    Spanned {
        span: Span {
            start: 15,
            end: 28,
        },
        value: Lexeme(
            HexNumber,
            "100_000_000",
        ),
    },
    Spanned {
        span: Span {
            start: 29,
            end: 30,
        },
        value: Lexeme(
            At,
            "@",
        ),
    },
    Spanned {
        span: Span {
            start: 30,
            end: 39,
        },
        value: Lexeme(
            HexNumber,
            "100_000",
        ),
    },
    Spanned {
        span: Span {
            start: 39,
            end: 42,
        },
        value: Lexeme(
            Ident,
            "u64",
        ),
    },
    Spanned {
        span: Span {
            start: 43,
            end: 44,
        },
        value: Lexeme(
            At,
            "@",
        ),
    },
    Spanned {
        span: Span {
            start: 44,
            end: 47,
        },
        value: Lexeme(
            HexNumber,
            "1",
        ),
    },
    Spanned {
        span: Span {
            start: 47,
            end: 49,
        },
        value: Lexeme(
            Ident,
            "u8",
        ),
    },
    Spanned {
        span: Span {
            start: 50,
            end: 51,
        },
        value: Lexeme(
            At,
            "@",
        ),
    },
    Spanned {
        span: Span {
            start: 51,
            end: 55,
        },
        value: Lexeme(
            HexNumber,
            "1_",
        ),
    },
    Spanned {
        span: Span {
            start: 55,
            end: 59,
        },
        value: Lexeme(
            Ident,
            "u128",
        ),
    },
    Spanned {
        span: Span {
            start: 59,
            end: 59,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
